# CPPMatrixLib

./: CMakeLists.txt  Makefile  README.md
source/: CMakeLists.txt  matrix_constructors.cc  matrix_exceptions.h  matrix_oop.h  matrix_operator_overloads.cc  matrix_private_methods.cc  matrix_transformations.cc
tests/: CMakeLists.txt  constructors_tests.cc  operator_overloads_tests.cc  tests_main.cc  transformations_tests.cc
